# Mahjong

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  mahjong.cc  mahjong.h  mahjong_common.h  player.cc  player.h  tiles.cc  tiles.h
mahjong_tiles/: info.txt
src/: CMakeLists.txt  game_engine.h  logger.h  mahjong.cc  mahjong.h  mahjong_common.h  mahjong_game.h  main.cc  main.cpp  player.cc  player.h  tiles.cc  tiles.h
tests/unit/: CMakeLists.txt  test_mahjong.cpp  test_main.cpp  test_player.cpp  test_tiles.cpp
